# movie-recommendation

./: .gitignore  DESIGN.md  LICENSE
movie-recommender/: .dockerignore  .gitignore  DESIGN.md  Dockerfile  docker-compose.yml  evaluate.py  folder_structure.txt  pyproject.toml  requirements-dev.txt  requirements.txt  train.py
movie-recommender/configs/: feature_columns.json  genome_tag_columns.json  genre_columns.json
movie-recommender/configs/experiments/: ab_test.yaml  baseline_cf.yaml  baseline_genre_pop.yaml  baseline_mf.yaml  baseline_popularity.yaml  lgbm_full.yaml  xgb_full_tuned.yaml  xgb_plus_interaction.yaml  xgb_plus_time.yaml  xgb_user_item_only.yaml
movie-recommender/notebooks/: 03_feature_exploration.ipynb  04_baseline_experiments.ipynb
movie-recommender/scripts/: build_features.py  create_sample_dataset.py  select_features.py
movie-recommender/src/candidates/: __init__.py  base_candidate_generator.py  collaborative.py  hybrid.py  matrix_factorization.py  popularity.py
movie-recommender/src/config/: __init__.py  base_config.py  data_config.py  eval_config.py  experiment_config.py  feature_config.py  model_config.py  training_config.py
movie-recommender/src/evaluation/: __init__.py  base_evaluator.py  diversity_metrics.py  evaluator.py  ranking_metrics.py
movie-recommender/src/features/: __init__.py  base_feature_builder.py  feature_store.py  interaction_features.py  item_features.py  time_features.py  user_features.py
movie-recommender/src/ingestion/: __init__.py  cleaner.py  loader.py  splitter.py
movie-recommender/src/ranking/: __init__.py  base_ranker.py  base_recommender.py  baselines.py  cold_start.py  lgbm_ranker.py  ranker_factory.py  two_stage_recommender.py  xgb_ranker.py
movie-recommender/tests/: test_candidate_generator.py  test_cold_start.py  test_config.py  test_data_pipeline.py  test_features.py  test_ranking_metrics.py
notebooks/: 01_eda.ipynb
