[project]
name = "movie-recommender"
version = "0.1.0"
description = "Production-style two-stage personalized movie recommender on MovieLens 25M"
requires-python = ">=3.11"
authors = [{ name = "Your Name" }]
readme = "README.md"
license = { text = "MIT" }

dependencies = [
  # ── core data ─────────────────────────────────────────────────────
  "pandas>=2.2.0,<3.0.0",
  "numpy>=1.26.0,<3.0.0",        # 2.x safe — LightGBM ≥4.4 supports it
  "pyarrow>=15.0.0,<20.0.0",     # parquet read/write
  "scipy>=1.13.0,<2.0.0",        # KS test, stats
  # ── ML ────────────────────────────────────────────────────────────
  "scikit-learn>=1.4.0,<2.0.0",
  "xgboost>=2.1.0,<4.0.0",       # 3.x is current stable
  "lightgbm>=4.4.0,<5.0.0",      # 4.4+ for numpy 2.x compat
  "implicit>=0.7.2,<1.0.0",      # ALS matrix factorisation
  "faiss-cpu>=1.8.0,<2.0.0",     # ANN index (1.13.x is current)
  # ── MLflow ────────────────────────────────────────────────────────
  "mlflow>=2.12.0,<3.0.0",
  # ── API ───────────────────────────────────────────────────────────
  "fastapi>=0.111.0,<1.0.0",
  "uvicorn[standard]>=0.29.0,<1.0.0",
  "pydantic>=2.7.0,<3.0.0",
  # ── database / cache ──────────────────────────────────────────────
  "asyncpg>=0.29.0,<1.0.0",
  "redis[asyncio]>=5.0.0,<6.0.0",
  # ── monitoring ────────────────────────────────────────────────────
  "prometheus-client>=0.20.0,<1.0.0",
  # ── utilities ─────────────────────────────────────────────────────
  "click>=8.1.0,<9.0.0",
  "pyyaml>=6.0.0,<7.0.0",
  "python-dotenv>=1.0.0,<2.0.0",
  "tqdm>=4.66.0,<5.0.0",
]

[project.optional-dependencies]
dev = [
  # linting + formatting
  "ruff>=0.4.0,<1.0.0",
  # type checking
  "mypy>=1.10.0,<2.0.0",
  "types-pyyaml>=6.0.0",
  "types-redis>=4.6.0",
  "pandas-stubs>=2.2.0",
  # testing
  "pytest>=8.2.0,<9.0.0",
  "pytest-cov>=5.0.0,<6.0.0",
  "pytest-asyncio>=0.23.0,<1.0.0",
  "httpx>=0.27.0,<1.0.0",         # FastAPI test client
  # dependency management
  "pip-tools>=7.4.0,<8.0.0",
]

[project.scripts]
train    = "train:train"
evaluate = "evaluate:evaluate"

[build-system]
requires      = ["setuptools>=70"]
build-backend = "setuptools.backends.legacy:build"

[tool.setuptools.packages.find]
where   = ["."]
include = ["src*"]

# ── ruff (linting + formatting) ───────────────────────────────────────────────
[tool.ruff]
line-length    = 88
target-version = "py311"
src            = ["src", "tests"]

[tool.ruff.lint]
select = [
  "E",   # pycodestyle errors
  "W",   # pycodestyle warnings
  "F",   # pyflakes
  "I",   # isort
  "B",   # flake8-bugbear
  "UP",  # pyupgrade
  "N",   # pep8-naming
  "SIM", # flake8-simplify
]
ignore = [
  "E501",   # line length handled by formatter
  "B008",   # do not perform function calls in default arguments (FastAPI Depends)
]

[tool.ruff.lint.per-file-ignores]
"tests/*"  = ["S101"]  # allow assert statements in tests
"train.py" = ["T201"]  # allow print in CLI entrypoints
"evaluate.py" = ["T201"]

[tool.ruff.lint.isort]
known-first-party = ["src"]

# ── mypy (type checking) ──────────────────────────────────────────────────────
[tool.mypy]
python_version          = "3.11"
warn_return_any         = true
warn_unused_configs     = true
warn_unused_ignores     = true
disallow_untyped_defs   = true
disallow_any_generics   = true
ignore_missing_imports  = true   # for libs without stubs (faiss, implicit)
strict_optional         = true

[[tool.mypy.overrides]]
module = ["xgboost.*", "lightgbm.*", "faiss.*", "implicit.*", "mlflow.*"]
ignore_missing_imports = true

# ── pytest ────────────────────────────────────────────────────────────────────
[tool.pytest.ini_options]
testpaths    = ["tests"]
asyncio_mode = "auto"
addopts      = "-v --tb=short"
markers = [
  "slow: marks tests as slow — skip with -m 'not slow'",
  "integration: marks integration tests requiring running services",
]

# ── coverage ──────────────────────────────────────────────────────────────────
[tool.coverage.run]
source = ["src"]
omit   = ["tests/*", "**/__init__.py"]

[tool.coverage.report]
fail_under   = 80
show_missing = true
skip_covered = false